[ADD] SEO and Google verification to webpage // [UPDATE] node-dependences

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Dictionary react-app" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dictionary App</title>
+    <link
+      rel="cannonical"
+      href="https://dictionary-react-ksenia.netlify.app/"
+    />
+    <meta
+      name="description"
+      content="Search for meanings and definitions of english words for free in nicely designed Dictionary App, created in React.js. Displays quality results including phonetics, audio pronunciations, example sentences, synonyms and illustrations for each search."
+    />
+    <title>
+      Dictionary | English Word Meanings and Definitions with Examples,
+      Illustrations and Audio Pronuncation
+    </title>
+    <meta
+      name="google-site-verification"
+      content="kySRJhozAw8FmMpdUB38Pm1Co-IOqiPyPQq5_0VCTaQ"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
