new API integration for image search, styled with Flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,9 @@
     />
     <meta
       name="description"
-      content="Search for meanings and definitions of english words for free in nicely designed Dictionary App, created in React.js. Displays quality results including phonetics, audio pronunciations, example sentences, synonyms and illustrations for each search."
+      content="Search for english word meanings and definitions, phonetics and audio pronunciations, example sentences, synonyms and illustrations in nicely designed dictionary for free!"
     />
-    <title>
-      Dictionary | English Word Meanings and Definitions with Examples,
-      Illustrations and Audio Pronuncation
-    </title>
+    <title>Dictionary | English Word Meanings and Definitions</title>
     <meta
       name="google-site-verification"
       content="kySRJhozAw8FmMpdUB38Pm1Co-IOqiPyPQq5_0VCTaQ"
